--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "web_app"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.5.1"
+futures = "0.3.30"
 serde_json = "1.0.113"
+tokio = { version = "1.36.0", features = ["full"] }
 
-
+[dev-dependencies]
+async-std = "1.12.0"
